--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'Build step not required for backend'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["mongodb", "express", "node", "filmes", "api"],
-  "author": "Vasco Cardos",
+  "author": "Seu Nome",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
@@ -20,8 +19,5 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
