--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'Build step not required for backend'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["mongodb", "express", "node", "filmes", "api"],
-  "author": "Seu Nome",
+  "author": "Vasco Cardos",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,5 +20,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
